# ferum-indexer-node

./: .gitignore  Cargo.toml  fullnode.yaml
aptos-node/: Cargo.toml
aptos-node/src/: lib.rs
config/src/config/: ferum_config.rs  indexer_config.rs  mod.rs  storage_config.rs
crates/aptos/: Cargo.toml
crates/aptos-protos/: buf.gen.yaml
crates/aptos-protos/proto/aptos/extractor/v1/: ferum.proto
crates/aptos-protos/proto/aptos/tokens/v1/: tokens.proto
crates/aptos-protos/src/go/github.com/aptos/types/pb/aptos/tokens/v1/: tokens.pb.go
crates/aptos-protos/src/go/github.com/ferum-dex/ferum-indexer/types/pb/aptos/ferum/v1/: ferum.pb.go
crates/aptos-protos/src/go/github.com/streamingfast/firehose-aptos/types/pb/aptos/block_output/v1/: block_output.pb.go
crates/aptos-protos/src/go/github.com/streamingfast/firehose-aptos/types/pb/aptos/extractor/v1/: extractor.pb.go  tokens.pb.go
crates/aptos-protos/src/go/github.com/streamingfast/firehose-aptos/types/pb/aptos/util/timestamp/: timestamp.pb.go
crates/aptos-protos/src/pb/: aptos.block_output.v1.rs  aptos.block_output.v1.serde.rs  aptos.ferum.v1.rs  aptos.ferum.v1.serde.rs  aptos.tokens.v1.rs  mod.rs
crates/aptos-rosetta/: Cargo.toml
crates/crash-handler/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/migrations/2022-08-08-043603_core_tables/: up.sql
crates/indexer/migrations/2023-03-31-100927_add_ferum_tables/: down.sql  up.sql
crates/indexer/src/: lib.rs  metrics.rs  runtime.rs  schema.rs
crates/indexer/src/config/: ferum.json
crates/indexer/src/processors/: ferum_processor.rs  mod.rs
ecosystem/ferum-stream/: Cargo.toml
ecosystem/ferum-stream/src/: convert.rs  lib.rs  metrics.rs  runtime.rs
ecosystem/sf-indexer/ferum-stream/: Cargo.toml
ecosystem/sf-indexer/ferum-stream/src/: convert.rs  runtime.rs
ecosystem/sf-indexer/firehose-stream/: Cargo.toml
ecosystem/sf-indexer/firehose-stream/src/: convert.rs  runtime.rs
ecosystem/sf-indexer/firehose-stream/src/tests/: proto_converter_tests.rs
ferum-indexer/: Cargo.toml
ferum-indexer/src/: lib.rs  main.rs
storage/aptosdb/src/: lib.rs
