[package]
name = "ferum-indexer"
version = "0.1.0"
authors = ["Periodic Foudnation <xrelapse@hotmail.com>"]
description = "Ferum indexer"
repository = "https://github.com/ferum-dex/ferum-indexer"
homepage = "https://ferum.xyz"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.58"
bcs = "0.1.3"
clap = "3.1.8"
fail = "0.5.0"
futures = "0.3.21"
hex = "0.4.3"
rand = "0.7.3"
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.8"

aptos-config = { path = "../config" }
aptos-fh-stream = { path = "../ecosystem/sf-indexer/firehose-stream" }
aptos-logger = { path = "../crates/aptos-logger" }
aptos-state-view = { path = "../storage/state-view" }
aptos-types = { path = "../types" }
aptosdb = { path = "../storage/aptosdb" }
storage-interface = { path = "../storage/storage-interface" }

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[features]
default = []
