[package]
name = "aptos-ferum-stream"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos StreamingFast Firehose Stream"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "serde"] }
fail = "0.5.0"
futures = "0.3.21"
hex = "0.4.3"
hyper = "0.14.18"
itertools = "0.10.3"
once_cell = "1.10.0"
prost = "0.10.4"
serde = { version = "1.0.137", features = ["derive"], default-features = false }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
tokio = { version = "1.18.2", features = ["full"] }
warp = { version = "0.3.2", features = ["default", "tls"] }

aptos-api = { path = "../../../api", package = "aptos-api" }
aptos-api-types = { path = "../../../api/types" }
aptos-bitvec = { path = "../../../crates/aptos-bitvec" }
aptos-config = { path = "../../../config" }
aptos-logger = { path = "../../../crates/aptos-logger" }
aptos-mempool = { path = "../../../mempool" }
aptos-metrics-core = { path = "../../../crates/aptos-metrics-core" }
aptos-protos = { path = "../../../crates/aptos-protos" }
aptos-types = { path = "../../../types" }
aptos-vm = { path = "../../../aptos-move/aptos-vm" }
move-deps = { path = "../../../aptos-move/move-deps" }
storage-interface = { path = "../../../storage/storage-interface" }

[features]
failpoints = ["fail/failpoints"]
